--- a/index.html
+++ b/index.html
@@ -1,27 +1,153 @@
 <!doctype html>
-<html>
-    <title>구글 메인화면 예제</title>
+<html lang="en">
+    <title>메인화면 예제</title>
     <head>
-        <p style="text-align:left;">
-            <font size="2em" color="green">문서제목, 자바스크립트 코드, CSS 스타일 정의, 메타데이터정의</font>
-        </p>
-        <br>
-        <! br은 줄 바꿈입니다.>
-        <hr>
-        <! hr은 밑줄을 그려줍니다.>
-    </head>
-    <body>
-        <p style="text-align:center"><img src="img/Google_2015_logo.svg.png" alt="구글이미지"></p>
-        <br>
-        <! br은 줄 바꿈입니다.>
-        <p style="text-align:center">검색 :
-            <input type="text" name="search" size="55" value=""><button type="button" onclick="alert('검색을 수행합니다!')">검색</button><br></p>
-        <br><br><br><br><br><br>
-        <! 간격을 위해 줄바꿈을 여러번 추가 해줍니다.>
-        <p style="text-align:right;">
-            <font size="3em" color="red">문서의 본문 텍스트, 이미지, 테이블, 자바스크립트 코드, 동영상 등</font>
-        </p>
-        <br>
-        <! br은 줄 바꿈입니다.>
-    </body>
-</html>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+            <meta name="author" content="학번">
+                <meta charset="utf-8">
+                    <meta name="viewport" content="width=device-width, initial-scale=1">
+                        <meta name="“keywords”" content="“computer”">
+                            <base href="https://university-subject-gtuhe.run.goorm.site/">
+                                <script type="text/javascript" src="js/search.js" defer="defer"></script>
+		                        <script type="text/javascript" src="js/hover.js" defer="defer"></script>
+                                <script type="text/javascript" src="js/basic_test.js" defer="defer"></script>
+                                <script type="text/javascript" src="js/data_type.js" defer="defer"></script>
+                                <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"></head>
+                                <body>
+                                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+                                    <nav class="navbar navbar-expand-lg bg-light">
+                                        <div class="container-fluid">
+                                            <a class="navbar-brand" href="#">전체 메뉴</a>
+                                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                                                <span class="navbar-toggler-icon"></span>
+                                            </button>
+                                            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                                                <ul class="navbar-nav">
+                                                    <li class="nav-item">
+                                                        <a class="nav-link active" aria-current="page" href="#">홈페이지</a>
+                                                    </li>
+                                                    <li class="nav-item">
+                                                        <a class="nav-link" href="https://university-subject-gtuhe.run.goorm.site/">검색</a>
+                                                    </li>
+                                                    <li class="nav-item">
+                                                        <a class="nav-link" href="https://www.youtube.com">Youtube</a>
+                                                    </li>
+                                                    <li class="nav-item">
+                                                        <a class="nav-link" href="https://map.kakao.com">지도</a>
+                                                    </li>
+                                                    <li class="nav-item">
+                                                        <a class="nav-link" href="https://mail3.nate.com">메일</a>
+                                                    </li>
+                                                    <li class="nav-item">
+                                                        <a class="nav-link" href="#">앱스토어</a>
+                                                    </li>
+                                                    <li class="nav-item dropdown">
+                                                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                            기타 웹사이트
+                                                        </a>
+                                                        <ul class="dropdown-menu">
+                                                            <li>
+                                                                <a class="dropdown-item" href="https://www.naver.com">네이버</a>
+                                                            </li>
+                                                            <li>
+                                                                <a class="dropdown-item" href="https://www.daum.net">다음</a>
+                                                            </li>
+                                                            <li>
+                                                                <a class="dropdown-item" href="https://www.nate.com">네이트</a>
+                                                            </li>
+                                                        </ul>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </nav>
+                                    <p style="text-align:left;">
+                                        <b>
+                                            <font size="2em" color="green">문서제목, 자바스크립트 코드, CSS 스타일 정의, 메타데이터정의</font>
+                                        </b>
+                                    </p>
+                                    <br>
+                                        <! br은 줄 바꿈입니다.>
+                                        <hr>
+                                            <! hr은 밑줄을 그려줍니다.>
+                                            <div class="mx-auto" style="width: 400px;">
+                                                <a href="index.html" target="blank">
+                                                    <img src="img/Google_2015_logo.svg.png" class="img-fluid" alt="구글이미지" onmouseover="over(this)" onmouseout="out(this)"></a>
+                                                </div>
+                                                <br>
+                                                    <! br은 줄 바꿈입니다.>
+                                                    <form action="https://www.google.co.kr/search" method="GET" target="_blank">
+                                                        <div class="d-flex justify-content-center">
+                                                            <mx-auto>
+                                                                <input name="query" type="text" class="form-control-lg" placeholder="검색어 입력" aria-label="search" aria-describedby="search_btn" id="search_txt"></mx-auto>
+                                                                <button class="btn btn-success" type="submit" id="search_btn">검색</button>
+                                                            </div>
+                                                        </form>
+                                                        <caption align="top">현재 검색어 :
+                                                            <p id="search_message"></p>
+                                                        </caption>
+                                                        <! 테이블을 정의합니다.>
+                                                        <! 테이블 제목.>
+                                                        <div
+                                                            class="w-auto p-3" style="background-color: #;">
+                                                            <!-- <table class="table table-striped table-bordered table-hover"> -->
+                                                            <table class="table table-dark table-hover">
+                                                                <caption align="top">인기 검색어 :
+                                                                    <p id="search_message"></p>
+                                                                </caption>
+                                                                <tbody class="table-group-divider">
+                                                                    <tr bgcolor="yellow">
+                                                                        <td class="table-primary" width="50">
+                                                                            <b>영화</b>
+                                                                        </td>
+                                                                        <td width="80" bgcolor="blue">아저씨</td>
+                                                                        <td width="80" bgcolor="blue">아저씨</td>
+                                                                        <td width="100">어머니</td>
+                                                                        <td width="100">헬머니</td>
+                                                                        <td>할부지</td>
+                                                                    </tr>
+                                                                    <tr bgcolor="red">
+                                                                        <td class="table-secondary" width="50">
+                                                                            <b>음악</b>
+                                                                        </td>
+                                                                        <td>KPOP</td>
+                                                                        <td>JPOP</td>
+                                                                        <td>ROCK1</td>
+                                                                        <td>ROCK2</td>
+                                                                        <td>EUROBEAT</td>
+                                                                    </tr>
+                                                                    <tr bgcolor="blue">
+                                                                        <td class="table-success" width="50">
+                                                                            <b>게임</b>
+                                                                        </td>
+                                                                        <td>LOL</td>
+                                                                        <td>WOW</td>
+                                                                        <td>DIABLO</td>
+                                                                        <td colspan="2">SUDDEN ATTACK 2</td>
+                                                                    </tr>
+                                                                </tbody>
+                                                            </table>
+                                                        </div>
+                                                        <br>
+                                                            <br>
+                                                                <br>
+                                                                    <br>
+                                                                        <! 간격을 위해 줄바꿈을 여러번 추가 해줍니다.>
+                                                                        <hr>
+                                                                            <p style="text-align:right;">
+                                                                                <font size="3em" color="red">문서의 본문 텍스트, 이미지, 테이블, 자바스크립트 코드, 동영상 등</font>
+                                                                            </p>
+                                                                            <br>
+                                                                                <! br은 줄 바꿈입니다.>
+                                                                                <footer class="bg-light text-center text-lg-start">
+                                                                                    <div class="text-center p-3" style="background-color:#D8D8D8;">
+                                                                                        <h3 class="text-secondary">FOOTER TEST</h3>
+                                                                                        © 2020 Copyright:
+                                                                                        <a class="text-dark" href="https://꾸글.com/">꾸글.com</a>
+                                                                                        <i class="bi bi-facebook" style="color: #3b5998; font-size: 2rem;"></i>
+                                                                                        <i class="bi bi-twitter" style="color: #55acee; font-size: 2rem;"></i>
+                                                                                        <i class="bi bi-instagram" style="color: #ac2bac; font-size: 2rem;"></i>
+                                                                                    </div>
+                                                                                </footer>x`
+                                                                            </body>
+                                                                        </html>
