--- a/index_login.html
+++ b/index_login.html
@@ -15,7 +15,7 @@
 		                        <script type="text/javascript" src="js/pop_up.js" defer="defer"></script>
 		                        <script type="text/javascript" src="js/array_test2.js" defer="defer"></script>
                                 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"></head>
-                                <body onload = "pop_up();">
+                                <body onload="get_id();">
                                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
                                     <nav class="navbar navbar-expand-lg bg-light">
                                         <div class="container-fluid">
@@ -60,7 +60,7 @@
                                                         </ul>
                                                     </li>
 													<li class="nav-item">
-	                                                            <button class="btn btn-outline-success" type="submit" onclick="location.href='login/login.html'">로그인하기</button>
+	                                                            <button class="btn btn-outline-success" type="submit" onclick="logout()">로그아웃하기</button>
 													</li>
                                                 </ul>
                                             </div>
