--- a/login.html
+++ b/login.html
@@ -12,10 +12,10 @@
                                 <script type="text/javascript" src="js/data_type.js" defer="defer"></script>
 		                        <script type="text/javascript" src="js/pop_up.js" defer="defer"></script>
 		                        <script type="text/javascript" src="js/array_test2.js" defer="defer"></script>
-		                        <script type="text/javascript" src="../js/login.js" defer="defer"></script>
+		                        <script type="text/javascript" src="js/login.js" defer="defer"></script>
 	                            <script type="text/javascript" src="js/hover.js" defer="defer"></script>
                                 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"></head>
-                              <body class="text-center">
+                              <body class="text-center" onload = "init();">
     <br><br><br>
     <main class="form-signin">
       <form id="form_main">
@@ -35,7 +35,7 @@
 
         <div class="checkbox mb-3">
           <label>
-            <input type="checkbox" value="remember-me"> 아이디 기억
+            <input type="checkbox" value="remember-me" id="idSaveCheck"> 아이디 기억
           </label>
         </div>
         <button class="w-100 btn btn-lg btn-primary" onclick="login()" type="button">로그인 하기</button>
