--- a/pop_up.html
+++ b/pop_up.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <title>팝업창 테스트</title>
-        <script type="text/javascript" src="../js/pop_up.js" defer></script>
-		<script type="text/javascript" src="../js/close_window.js" defer="defer"></script>
+        <script type="text/javascript" src="js/pop_up.js" defer></script>
+		<script type="text/javascript" src="js/close_window.js" defer="defer"></script>
 		  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -14,5 +14,7 @@
 		<h1 class="display-1"><i class="bi bi-alarm"></i> 팝업창 확인<br><br></h1>
         <h1 class="display-4"><div id="divClock" class="clock"></div></h1>
 		<h1 class="display-4"><div id="Time" class="clock"></div></h1>
+		<input class="form-check-input" type="checkbox" id="check_popup" onclick="closePopup();">
+		<label class="form-check-label" for="flexCheckChecked">하루에 한 번만 열기</label>
 </body>
 </html>	
