--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
 		                        <script type="text/javascript" src="js/pop_up.js" defer="defer"></script>
 		                        <script type="text/javascript" src="js/array_test2.js" defer="defer"></script>
 		                        <script type="text/javascript" src="js/login.js" defer="defer"></script>
+		                        <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script> 
 	                            <script type="text/javascript" src="js/hover.js" defer="defer"></script>
                                 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"></head>
                               <body class="text-center" onload = "init();">
