수업이외의추가구현완료

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <a class="nav-link" href="#"></a>
         </li>
         <li class="nav-item">
-   <a class="nav-link" href="profile/profile.html" target='_blank'>소개 페이지</a>
+   <a class="nav-link" href="profile.html" target='_blank'>소개 페이지</a>
         </li>
         </ul>
     </div>
@@ -157,6 +157,13 @@
                                                                     </tr>
                                                                 </tbody>
                                                             </table>
+		<div class="text-center">
+  <h3>현재 최고 인기 동영상:</h3>
+  <div class="d-flex justify-content-center">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/M0O2YjP7ngw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </div>
+</div>
+
                                                         </div>
                                                         <br>
                                                             <br>
