--- a/index_join.html
+++ b/index_join.html
@@ -9,11 +9,12 @@
         <meta name="“keywords”" content="“computer”">
         <base href="https://university-subject-gtuhe.run.goorm.site/">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"></head>
-    <body>
+<body onload="session_join_get()">
+
         <br>
         <! br은 줄 바꿈입니다.>
         <div class="mx-auto" style="width: 500px;">
-            <a href="index.html"><img src="img/googlelogo_color_272x92dp.png" class="img-fluid" alt="구글이미지"></a>
+            <a href="index.html"><img src="img/Google_2015_logo.svg.png" class="img-fluid" alt="구글이미지"></a>
         </div>
         <br>
         <div class="text-center p-3">
