--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
            </div>
         <h1 class="h3 mb-3 fw-normal">로그인을 해주세요!</h1>
         <div class="form-floating">
-          <input type="email" class="form-control" id="floatingInput" name="id" placeholder="name@example.com">
+          <input type="email" class="form-control" id="floatingInput" name="email" placeholder="name@example.com">
           <label for="floatingInput">이메일 주소</label>
         </div>
         <div class="form-floating">
@@ -39,7 +39,7 @@
             <input type="checkbox" value="remember-me" id="idSaveCheck"> 아이디 기억
           </label>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" onclick="login()" type="button">로그인 하기</button>
+<button class="w-100 btn btn-lg btn-primary" onclick="login(); login_count();" type="button">로그인 하기</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2017–2023</p>
           
         <!-- 
